[tool.poetry]
name = "doodler"
version = "0.1.0"
description = "An AI-based doodler"
authors = ["Diego Hurtado <diegohurtado@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.16"
ipdb = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
